# model/user.go
@@ -13,7 +13,7 @@ func NewUser(fullName, password, phoneNumber string) *User {
 	return &User{
 		FullName:    fullName,
 		Password:    password,
-		PhoneNumber: phoneNumber,
+		PhoneNumber: phoneNumber[1:],
 	}
 }
 
@@ -23,4 +23,24 @@ func (u *User) Authenticate(password string) bool {
 	}
 
 	return true
+}
+
+func (u *User) UpdateFullName(fullName *string) {
+	if fullName != nil && *fullName != u.FullName {
+		u.FullName = *fullName
+	}
+}
+
+func (u *User) UpdatePhoneNumber(phoneNumber *string) {
+	if phoneNumber != nil && *phoneNumber != u.PhoneNumber {
+		u.PhoneNumber = *phoneNumber
+	}
+}
+
+func (u *User) PhoneNumberChanged(phoneNumber *string) bool {
+	if phoneNumber != nil && *phoneNumber != u.PhoneNumber {
+		return true
+	}
+
+	return false
 }
